# displayrecorder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  buildAndPack.yml
src/: args.rs  capture.rs  d3d.rs  displays.rs  encoder.rs  hotkey.rs  main.rs  media.rs  resolution.rs
src/video/: encoder.rs  encoder_device.rs  encoding_session.rs  mod.rs  processor.rs  util.rs
src/video/mf/: encoder.rs  encoder_device.rs  encoding_session.rs  processor.rs
src/video/wmt/: encoding_session.rs  sample_generator.rs
