[package]
name = "displayrecorder"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
description = "A utility to record displays."
edition = "2018"

[dependencies]
clap = "2.33.3"

[dependencies.windows]
version = "0.25.0"
features = [
    "Foundation",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
]
