[package]
name = "displayrecorder"
version = "0.4.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
description = "A utility to record displays."
edition = "2021"
resolver = "2"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }

[dependencies.windows]
version = "0.44.0"
features = [
    "Foundation",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[features]
d3ddebug = []
